<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/orange"
        android:gravity="center_vertical"
        android:padding="5dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daily Contacts"
            android:paddingLeft="30dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/disclaimer"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="25dp" />

            <CheckBox
                android:id="@+id/checkBoxAgreement"
                android:layout_marginTop="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="updateAgreement"
                android:textColor="@color/black"
                android:text="@string/agreement_checkbox" />

            <Button
                android:id="@+id/btnBroadcastBegin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:layout_marginTop="10sp"
                android:textColor="@color/white"
                android:drawableStart="@android:drawable/ic_menu_mylocation"
                android:drawableLeft="@android:drawable/ic_menu_mylocation"
                android:enabled="false"
                android:onClick="startBroadcast"
                android:text="@string/start_broadcast_btn_label" />

            <Button
                android:id="@+id/btnBroadcastStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@android:drawable/ic_delete"
                android:drawableLeft="@android:drawable/ic_delete"
                android:enabled="true"
                android:background="@drawable/shape"
                android:textColor="@color/white"
                android:onClick="stopBroadcast"
                android:text="@string/stop_broadcast_btn_label" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>